user web form on admin side

--- a/DOWTank/Views/Admin/UserIndex.cshtml
+++ b/DOWTank/Views/Admin/UserIndex.cshtml
@@ -168,7 +168,7 @@
 
         function linkformatter(cellvalue, options, rowObject) {
             //rowObject.Id
-            return '<a style="color:#286090;font-size:12px;" href="/Admin/SecurityProfile?id=' + rowObject.SecurityID + '" >Edit</a>';
+            return '<a style="color:#286090;font-size:12px;" href="/Admin/EditUser?id=' + rowObject.SecurityID + '" >Edit</a>';
         }
 
         $(function () {
